
Version 0.7-9 (??-03-2012, Rev. 12??)
=====================================

- Improved font size adjustment for edge labels.

- Show syntax error instead of infinite loop if an unparseable edge weight is entered. 

Version 0.7-8 (06-03-2012, Rev. 1252)
=====================================

- Edges can be created by drag'n'drop. 
  (Drag from the first node and drop on the second node.)
  
- Button to add edges stays pressed down until it is pressed again (or edges are added).
  This allows faster creation of graphs with many nodes.

- Fixed (unproblematic but annoying) NullPointerException with drag'n'drop
  introduced in 0.7-7.

- Fixed an error window popping up (but nothing was wrong at all) in the
  rare case that while dragging an edge it was double clicked and deleted.
  
- If edge weights are NULL, the weightStr is set to "NULL" instead of 
  throwing a RuntimeException.
  
- Fixed: Check for negative eigen values always resulted in the message
  that the matrix can not be processed due to NA values.

 14 files changed, 136 insertions(+), 45 deletions(-)
 

Version 0.7-7 (17-02-2012, Rev. 1236)
=====================================

- Fixed severe (but at least obvious) regression in 0.7-6: All p-values beyond the
  first one were always immediately set to 0.

- Simes test calculates also pvalues. An extra option adjPValues=TRUE is added to
  the gMCP function. Setting this to FALSE will sometimes increase the speed 
  (and memory consumption) of the Simes test significantly.

- New wizard for the creation of correlation matrices.
  
- Reordering of hypotheses is possible (important for e.g. correlation matrices).
  Java 5 users: Rearranging nodes with drag'n'drop does not yet work for you. 

- If the entered matrix is not positive semidefinite, 
  i.e. negative eigen values exist, a warning is given.

- New S4 method getMatrix for getting the adjacency matrix from a graphMCP object.
