@@ -1,6 +1,6 @@
 generateBounds <-
-function(g,w,cr,al=.05,hint=generateWeights(g,w)){
-  res <- t(apply(hint,1,b.dunnet,a=al,cr=cr))
+function(g,w,cr,al=.05,hint=generateWeights(g,w),exhaust=F){
+  res <- t(apply(hint,1,b.dunnett,a=al,cr=cr,exhaust=exhaust))
   res
 }
 
